=========
Changelog
=========

0.3 (unreleased)
================

- Refactor secrets: turn them into a core feature instead of a pure library
  component.


0.2.9 (2013-07-06)
==================

- Fix #12527: utils.cmd breaks on spacey arguments and embedded quotes.

- Avoid accidentally creating incorrect directories in developer VFS mapping.

- Switch testrunner to pytest. Refactor some tests to take advantage of its
  capabilities.

- Clean up PEP8 / pyflakes errors, integrate pytest plugin to ensure continued
  compliance.

- Clean up buildout versions specifications.

- Fix .dmg extractor to copy symlinks as symlinks.

- Fix remote sudo for Mac OS X target hosts.


0.2.8 (2013-06-18)
==================

- Added archive extractor for .dmg files.

- Added flag for supervisor to control whether global or individual restarts
  wait until everything is running.

0.2.7 (2013-05-22)
==================

- Fix template for Nagios check service dependencies.

- Update bootstrap call for batou-internal bootstrapping.

0.2.6 (2013-05-18)
==================

- Add component that clones from a Mercurial repository.

- Write supervisord.pid into /run/local instead of ${workdir}/var to ensure
  correct startup after machine crashes.

- Add `ignore_returncode` parameter to Component.cmd() to suppress exceptions
  on unsuccessful command execution.


0.2.5 (2013-04-23)
==================

- Fix interaction between supervisor programs and disabled supervisors: don't
  try to start those programs.


0.2.4 (2013-04-22)
==================

- Force reread/update on supervisor after config changes.


0.2.3 (2013-04-22)
==================

- supervisor: wait up to 60 seconds instead of 30 until supervisor responds to
  a PID after triggering shutdown. Fix bug trying to detect shutdown:
  RuntimeError would cause residual data in output variables.

- supervisor: after reloading, wait as long as the highest startup delay was